Added some more dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://img.freepik.com/premium-photo/home-symbol-logo-icon-vector-illustration_1003030-16874.jpg?uid=R114683630&ga=GA1.1.134876288.1693412887&semt=ais_ai_generated" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
